프로젝트 이름 변경

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "yo-test",
+  "name": "thewhalegames.com",
   "private": true,
   "dependencies": {
     "bootstrap-sass-official": "~3.1.0",
