--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "bootstrap-sass-official": "~3.1.0",
     "jquery": "~1.11.0",
-    "font-awesome": "~4.0.3"
+    "font-awesome": "~4.0.3",
+    "scrollReveal.js": "~0.1.2"
   },
   "devDependencies": {}
 }
